--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
     /* Fonts */
-    --primary-font: Arial, Helvetica, sans-serif;;
+    --primary-font: Arial, Helvetica, sans-serif;
+    ;
     --secondary-font: 'Courier New', Courier, monospace;
 
     /* Sizes */
@@ -28,7 +29,12 @@ body {
     margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
     padding: 0;
 }
@@ -43,7 +49,10 @@ ul {
     padding: 0;
     list-style: none;
 }
-dl, dt, dd {
+
+dl,
+dt,
+dd {
     margin: 0;
 }
 
@@ -100,7 +109,8 @@ body {
     line-height: 2rem;
     color: #fff;
 }
-.header-txt > span {
+
+.header-txt>span {
     display: block;
 }
 
@@ -111,9 +121,11 @@ body {
     right: 2rem;
     top: calc(50% - 3rem / 2);
 }
+
 .cart-img {
     width: 3rem;
 }
+
 .cart-nb {
     position: absolute;
     top: -.5rem;
@@ -126,7 +138,7 @@ body {
     border-radius: 50%;
     background-color: var(--secondary-color);
     color: var(--background-dark);
-    font-weight: bold;  
+    font-weight: bold;
 
 }
 
@@ -165,29 +177,31 @@ body {
     text-align: left;
     cursor: pointer;
 }
+
 .product-acrd-lnk::after {
     content: "🔺";
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute; 
+    position: absolute;
     top: calc(50% - 1rem);
     right: 1rem;
     width: 2rem;
     aspect-ratio: 1/1;
     font-size: 1.5rem;
 }
+
 .product-acrd-lnk.closed::after {
     content: "🔻";
 }
 
-.product-advantages > li {
+.product-advantages>li {
     position: relative;
     margin-left: 5rem;
     margin-bottom: 1rem;
 }
 
-.product-advantages > li::before {
+.product-advantages>li::before {
     content: "✔️";
     position: absolute;
     left: -3rem;
@@ -200,7 +214,7 @@ body {
     gap: 1rem;
 }
 
-.product-car > dt {
+.product-car>dt {
     font-weight: bold;
 }
 
@@ -221,6 +235,7 @@ body {
     font-weight: bold;
     color: var(--primary-color);
 }
+
 .add {
     display: flex;
     align-items: center;
@@ -228,6 +243,7 @@ body {
     height: 5rem;
     gap: 1rem;
 }
+
 .add-qty {
     display: flex;
     align-items: center;
@@ -240,15 +256,18 @@ body {
     font-size: 1.5rem;
     font-family: var(--secondary-font);
 }
+
 .add-lbl {
     font-size: 1.5rem;
 }
+
 .add-input {
     width: 2rem;
     height: 100%;
     border: none;
     text-align: right;
 }
+
 .add-cta {
     display: flex;
     align-items: center;
@@ -264,6 +283,7 @@ body {
     color: #fff;
     transition: background var(--transition-duration) var(--transition-function);
 }
+
 .add-cta-clicked {
     display: flex;
     align-items: center;
@@ -306,6 +326,7 @@ body {
 .pictures-prev {
     left: 1rem;
 }
+
 .pictures-next {
     right: 1rem;
 }
@@ -318,9 +339,11 @@ body {
     .pictures {
         max-width: 600px;
     }
+
     .pictures-handler {
         display: none;
     }
+
     .pictures-img {
         width: 100%;
         aspect-ratio: 1/1;
@@ -339,9 +362,11 @@ body {
         grid-template-columns: repeat(5, 1fr);
         width: 100%;
     }
+
     .thumbs-itm {
-        font-size:0;
+        font-size: 0;
     }
+
     .thumbs-img {
         width: 100%;
     }
@@ -353,12 +378,20 @@ body {
     display: none;
 }
 
-.slide-left {
-    animation: slide-left 0.5s forwards;
+.slide-in-right {
+    animation: slide-in-right 1s forwards;
 }
 
-.slide-right {
-    animation: slide-right 0.5s forwards;
+.slide-in-left {
+    animation: slide-in-left 1s forwards;
+}
+
+.slide-out-left {
+    animation: slide-out-left 1s forwards;
+}
+
+.slide-out-right {
+    animation: slide-out-right 1s forwards;
 }
 
 .similar-btn-mobile {
@@ -371,18 +404,20 @@ body {
     aspect-ratio: 1/1;
     font-size: 3rem;
     cursor: pointer;
+    z-index: 10;
 }
 
 .similar-btn-prev {
     left: 1rem;
 }
+
 .similar-btn-next {
     right: 1rem;
 }
 
 .similar-lst {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -408,13 +443,16 @@ body {
     height: 100%;
     transition: background var(--transition-duration) var(--transition-function);
 }
+
 .similar-img {
-    width:100%;
+    width: 100%;
 }
+
 .similar-ttl {
     font-size: 1.5rem;
     text-align: center;
 }
+
 .similar-price {
     position: absolute;
     top: 1rem;
@@ -435,10 +473,12 @@ body {
     .similar-lnk:hover {
         background-color: #dddddd;
     }
+
     .similar-lst {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
+
     .similar-btn-mobile {
         display: none;
     }
@@ -454,6 +494,7 @@ body {
     padding: 2rem;
     background-color: var(--light-green);
 }
+
 .reinsur-lst {
     max-width: var(--container-width);
     margin: 0 auto;
@@ -463,6 +504,7 @@ body {
     justify-content: center;
     gap: 4rem;
 }
+
 .reinsur-itm {
     display: flex;
     flex-direction: column;
@@ -470,9 +512,11 @@ body {
     height: 100%;
     gap: 1rem;
 }
+
 .reinsur-img {
     height: 5rem;
 }
+
 .reinsur-txt {
     text-align: center;
     font-size: 2rem;
@@ -501,7 +545,7 @@ body {
     justify-content: flex-start;
     gap: 2rem;
     padding-bottom: 2rem;
-}  
+}
 
 .page-section {
     margin-bottom: 1rem;
@@ -524,10 +568,12 @@ body {
     .page-pics {
         grid-column: 1 / 1;
         grid-row: 1 / 3;
-    }  
+    }
+
     .page-ttl {
         grid-column: 2 / 3;
     }
+
     .similar {
         grid-column: 1 / 3;
     }
@@ -545,6 +591,7 @@ body {
     color: #fff;
     background-color: var(--background-dark);
 }
+
 .footer-cp {
     text-align: center;
 }
@@ -554,10 +601,12 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .legal-itm:not(:first-child)::before {
     content: "|";
-    padding: 0 .5rem; 
+    padding: 0 .5rem;
 }
+
 .legal-lnk {
     color: #fff;
 }
@@ -565,20 +614,43 @@ body {
 
 /* KEYFRAMES ANIMATIONS */
 
-@keyframes slide-left {
+@keyframes slide-in-right {
     0% {
-      -webkit-transform: translateX(100%);
+        -webkit-transform: translateX(100%);
     }
-    100% {
-      -webkit-transform: translateX(0%);
-    }
-  }
 
-@keyframes slide-right {
+    100% {
+        -webkit-transform: translateX(0%);
+    }
+}
+
+@keyframes slide-out-right {
     0% {
-      -webkit-transform: translateX(-100%);
+        -webkit-transform: translateX(0%);
     }
     100% {
-      -webkit-transform: translateX(0%);
+        -webkit-transform: translateX(-100%);
     }
-  }
+}
+
+
+@keyframes slide-in-left {
+    0% {
+        -webkit-transform: translateX(-100%);
+    }
+
+
+    100% {
+        -webkit-transform: translateX(0%);
+    }
+}
+
+@keyframes slide-out-left {
+    0% {
+        -webkit-transform: translateX(0%);
+    }
+
+    100% {
+        -webkit-transform: translateX(100%);
+    }
+}
